--- a/productos.html
+++ b/productos.html
@@ -51,57 +51,85 @@
                     EXPERIENCIAS EN LA INNOVACIÓN.</h1>
 
                 <p> Establecemos vínculos con las personas y empresas en cualquier momento y en
-                    cualquier lugar, aprovechando la amplia gama de nuestras soluciones.</p>
+                    cualquier lugar, aprovechando la amplia gama de nuestros productos.</p>
 
 
         </div>
 
     </div>
 
-        <!--tarjetas de productos-->
+    <!--tarjetas de productos-->
 
 
-        <div class="container__cards">
-            <div class="card">
-                <div class="cover__card">
-                    <img src="media/****" alt="">
-                </div>
-                <h2> ********** </h2>
-                <p>*********************.</p>
-                <hr>
-                <div class="footer__card">
-                    <!--<button class="botones agrandar">
-                <a href="./servicios.html">Saber más</a>
-            </button>-->
-                </div>
+    <div class="container__cards">
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/****" alt="">
             </div>
-            <div class="card">
-                <div class="cover__card">
-                    <img src="media/******" alt="">
-                </div>
-                <h2>*********</h2>
-                <p>*************************</p>
-                <hr>
-                <div class="footer__card">
-                    <!--<button class="botones agrandar">
+            <h2> INSUMOS INFORMATICOS</h2>
+            <p>*********************.</p>
+            <hr>
+            <div class="footer__card">
+                <!--<button class="botones agrandar">
                 <a href="./servicios.html">Saber más</a>
             </button>-->
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover__card">
-                    <img src="media/*******" alt="">
-                </div>
-                <h2>**********</h2>
-                <p>*************************</p>
-                <hr>
-                <div class="footer__card">
-                    <!--<button class="botones agrandar">
-                <a href="./servicios.html">Saber más</a>
-            </button>-->
-                </div>
             </div>
         </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/******" alt="">
+            </div>
+            <h2>INSUMOS ELECTRONICOS<h2>
+                    <p>*************************</p>
+                    <hr>
+                    <div class="footer__card">
+                        <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+                    </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/*******" alt="">
+            </div>
+            <h2>CELULARES</h2>
+            <p>*************************</p>
+            <hr>
+            <div class="footer__card">
+                <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+            </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/****" alt="">
+            </div>
+            <h2> COMPUTADORAS</h2>
+            <p>*********************.</p>
+            <hr>
+            <div class="footer__card">
+                <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+            </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/******" alt="">
+            </div>
+            <h2>TABLETAS ELECTRONICASa<h2>
+                    <p>*************************</p>
+                    <hr>
+                    <div class="footer__card">
+                        <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+                    </div>
+        </div>
+
+    </div>
+
 
 
 
