--- a/servicios.html
+++ b/servicios.html
@@ -134,6 +134,47 @@
                     <i></i>
                 </div>
             </div>
+
+
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/entregadesolucionestecnologicas.jpg" alt="">
+                </div>
+                <h2>Soporte Aparatos Industriales.
+                </h2>
+                <p> Es extremadamente importante contar con un soporte y
+                    mantenimiento de procesos industriales que asegure que toda la actividad de la empresa se ejecuta
+                    sin riesgo y con garantía de éxito.</p>
+                <hr>
+                <div class="footer__card">
+                    <h3 class="user__name"></h3>
+                    <i></i>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/transformaciondelatecnologia.jpg" alt="">
+                </div>
+                <h2>Consultoria.</h2>
+                <p>**************</p>
+                <hr>
+                <div class="footer__card">
+                    <h3 class="user__name"></h3>
+                    <i></i>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/blockchain.jpg" alt="">
+                </div>
+                <h2>Auditoria.</h2>
+                <p>**************************.</p>
+                <hr>
+                <div class="footer__card">
+                    <h3 class="user__name"></h3>
+                    <i></i>
+                </div>
+            </div>
         </div>
 
 
