--- a/productos.html
+++ b/productos.html
@@ -64,7 +64,7 @@
     <div class="container__cards">
         <div class="card">
             <div class="cover__card">
-                <img src="media/****" alt="">
+                <img src="media/insumosinformaticos.png" alt="">
             </div>
             <h2> INSUMOS INFORMATICOS</h2>
             <p>*********************.</p>
@@ -118,7 +118,7 @@
             <div class="cover__card">
                 <img src="media/******" alt="">
             </div>
-            <h2>TABLETAS ELECTRONICASa<h2>
+            <h2>TABLETAS ELECTRONICAS<h2>
                     <p>*************************</p>
                     <hr>
                     <div class="footer__card">
