--- a/servicios.html
+++ b/servicios.html
@@ -138,7 +138,7 @@
 
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/entregadesolucionestecnologicas.jpg" alt="">
+                    <img src="media/****************" alt="">
                 </div>
                 <h2>Soporte Aparatos Industriales.
                 </h2>
@@ -153,7 +153,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/transformaciondelatecnologia.jpg" alt="">
+                    <img src="media/**************" alt="">
                 </div>
                 <h2>Consultoria.</h2>
                 <p>**************</p>
@@ -165,7 +165,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/blockchain.jpg" alt="">
+                    <img src="media/***********" alt="">
                 </div>
                 <h2>Auditoria.</h2>
                 <p>**************************.</p>
