--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
 
             <div class="box__footer">
                 <h2>Productos</h2>
-                <a href="#">Acercda de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
+                <a href="#">Insumos Informaticos</a>
+                <a href="#">Insumos Electronicos</a>
+                
             </div>
 
             <!---
