--- a/productos.html
+++ b/productos.html
@@ -77,7 +77,7 @@
         </div>
         <div class="card">
             <div class="cover__card">
-                <img src="media/******" alt="">
+                <img src="media/insumoselectronicos.jpg" alt="">
             </div>
             <h2>INSUMOS ELECTRONICOS<h2>
                     <p>*************************</p>
@@ -90,7 +90,7 @@
         </div>
         <div class="card">
             <div class="cover__card">
-                <img src="media/*******" alt="">
+                <img src="media/celulares.jpg" alt="">
             </div>
             <h2>CELULARES</h2>
             <p>*************************</p>
@@ -103,7 +103,7 @@
         </div>
         <div class="card">
             <div class="cover__card">
-                <img src="media/****" alt="">
+                <img src="media/computadoras.jpg">
             </div>
             <h2> COMPUTADORAS</h2>
             <p>*********************.</p>
@@ -155,11 +155,9 @@
 
             <div class="box__footer">
                 <h2>Productos</h2>
-                <a href="#">Acercda de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
-            </div>
+                <a href="#">Insumos Informaticos</a>
+                <a href="#">Insumos Electronicos</a>
+                </div>
 
             <!---
             <div class="box__footer">
