--- a/productos.html
+++ b/productos.html
@@ -116,7 +116,7 @@
         </div>
         <div class="card">
             <div class="cover__card">
-                <img src="media/******" alt="">
+                <img src="media/tablet.png" alt="">
             </div>
             <h2>TABLETAS ELECTRONICAS<h2>
                     <p>*************************</p>
