--- a/productos.html
+++ b/productos.html
@@ -60,27 +60,32 @@
 
     <!--tarjetas de productos-->
 
+    <main>
+    <div class="container__background-triangle">
+        <div class="triangle triangle1"></div>
+        <div class="triangle triangle2"></div>
+        <div class="triangle triangle3"></div>
+    </div>
 
     <div class="container__cards">
         <div class="card">
             <div class="cover__card">
+                <img src="media/*******" alt="">
+            </div>
+            <h2> EQUIPOS INDUSTRIALES</h2>
+            <hr>
+            <div class="footer__card">
+                <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+            </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
                 <img src="media/insumosinformaticos.png" alt="">
             </div>
-            <h2> INSUMOS INFORMATICOS</h2>
-            <p>*********************.</p>
-            <hr>
-            <div class="footer__card">
-                <!--<button class="botones agrandar">
-                <a href="./servicios.html">Saber más</a>
-            </button>-->
-            </div>
-        </div>
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/insumoselectronicos.jpg" alt="">
-            </div>
-            <h2>INSUMOS ELECTRONICOS<h2>
-                    <p>*************************</p>
+            <h2>INSUMOS INFORMATICOS<h2>
+                    
                     <hr>
                     <div class="footer__card">
                         <!--<button class="botones agrandar">
@@ -90,49 +95,36 @@
         </div>
         <div class="card">
             <div class="cover__card">
-                <img src="media/celulares.jpg" alt="">
+                <img src="media/******" alt="">
             </div>
-            <h2>CELULARES</h2>
-            <p>*************************</p>
-            <hr>
-            <div class="footer__card">
-                <!--<button class="botones agrandar">
-                <a href="./servicios.html">Saber más</a>
-            </button>-->
-            </div>
-        </div>
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/computadoras.jpg">
-            </div>
-            <h2> COMPUTADORAS</h2>
-            <p>*********************.</p>
-            <hr>
-            <div class="footer__card">
-                <!--<button class="botones agrandar">
-                <a href="./servicios.html">Saber más</a>
-            </button>-->
-            </div>
-        </div>
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/tablet.png" alt="">
-            </div>
-            <h2>TABLETAS ELECTRONICAS<h2>
-                    <p>*************************</p>
-                    <hr>
-                    <div class="footer__card">
-                        <!--<button class="botones agrandar">
-                <a href="./servicios.html">Saber más</a>
-            </button>-->
-                    </div>
-        </div>
+            <h2>TELECOMUNICACIONES</h2>
 
+            <hr>
+            <div class="footer__card">
+                <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+            </div>
+        </div>
+        <div class="card">
+            <div class="cover__card">
+                <img src="media/********">
+            </div>
+            <h2> INSUMOS ELECTRONICOS</h2>
+
+            <hr>
+            <div class="footer__card">
+                <!--<button class="botones agrandar">
+                <a href="./servicios.html">Saber más</a>
+            </button>-->
+            </div>
+        </div>
+        
     </div>
 
 
 
-
+</main>
 
 
     <Footer>
