--- a/productos.html
+++ b/productos.html
@@ -39,6 +39,11 @@
         </div>
 
     </header>
+    <div class="container__background-triangle">
+        <div class="triangle triangle1"></div>
+        <div class="triangle triangle2"></div>
+        <div class="triangle triangle3"></div>
+    </div>
 
 
     <div class="cover">
@@ -60,71 +65,64 @@
 
     <!--tarjetas de productos-->
 
-    <main>
-    <div class="container__background-triangle">
-        <div class="triangle triangle1"></div>
-        <div class="triangle triangle2"></div>
-        <div class="triangle triangle3"></div>
-    </div>
-
-    <div class="container__cards">
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/*******" alt="">
-            </div>
-            <h2> EQUIPOS INDUSTRIALES</h2>
-            <hr>
-            <div class="footer__card">
-                <!--<button class="botones agrandar">
+       <section>
+        <div class="container__cards">
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/*******" alt="">
+                </div>
+                <h2> EQUIPOS INDUSTRIALES</h2>
+                <hr>
+                <div class="footer__card">
+                    <!--<button class="botones agrandar">
                 <a href="./servicios.html">Saber más</a>
             </button>-->
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/insumosinformaticos.png" alt="">
-            </div>
-            <h2>INSUMOS INFORMATICOS<h2>
-                    
-                    <hr>
-                    <div class="footer__card">
-                        <!--<button class="botones agrandar">
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/insumosinformaticos.png" alt="">
+                </div>
+                <h2>INSUMOS INFORMÁTICOS<h2>
+
+                        <hr>
+                        <div class="footer__card">
+                            <!--<button class="botones agrandar">
                 <a href="./servicios.html">Saber más</a>
             </button>-->
-                    </div>
-        </div>
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/******" alt="">
+                        </div>
             </div>
-            <h2>TELECOMUNICACIONES</h2>
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/******" alt="">
+                </div>
+                <h2>TELECOMUNICACIONES</h2>
 
-            <hr>
-            <div class="footer__card">
-                <!--<button class="botones agrandar">
+                <hr>
+                <div class="footer__card">
+                    <!--<button class="botones agrandar">
                 <a href="./servicios.html">Saber más</a>
             </button>-->
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="cover__card">
-                <img src="media/********">
-            </div>
-            <h2> INSUMOS ELECTRONICOS</h2>
+            <div class="card">
+                <div class="cover__card">
+                    <img src="media/********">
+                </div>
+                <h2> INSUMOS ELECTRONICOS</h2>
 
-            <hr>
-            <div class="footer__card">
-                <!--<button class="botones agrandar">
+                <hr>
+                <div class="footer__card">
+                    <!--<button class="botones agrandar">
                 <a href="./servicios.html">Saber más</a>
             </button>-->
+                </div>
             </div>
+
         </div>
-        
-    </div>
 
-
-
-</main>
+  
+       </section>
 
 
     <Footer>
@@ -149,7 +147,7 @@
                 <h2>Productos</h2>
                 <a href="#">Insumos Informaticos</a>
                 <a href="#">Insumos Electronicos</a>
-                </div>
+            </div>
 
             <!---
             <div class="box__footer">
