--- a/servicios.html
+++ b/servicios.html
@@ -55,9 +55,9 @@
                 <div class="cover__card">
                     <img src="media/informe.jpg" alt="">
                 </div>
-                <h2>Informes de Control de Organización de Servicios.
+                <h2>INFORMES DE CONTROL ORGANIZACIONAL.
                 </h2>
-                <p>Obtenga una evaluación independiente de los procesos y controles empresariales en el entorno de IT
+                <p>Facilitamos una evaluación independiente de los procesos y controles empresariales en el entorno IT
                     dentro de una organización de servicios.</p>
                 <hr>
                 <div class="footer__card">
@@ -65,41 +65,28 @@
                     <i></i>
                 </div>
             </div>
+
             <div class="card">
                 <div class="cover__card">
                     <img src="media/transformacionempresa.jpg" alt="">
                 </div>
-                <h2>Transformación digital de la empresa.</h2>
-                <p>Aprovechen las ventajas de la era digital para sacar provecho de la innovación, impulsar la
-                    eficiencia operativa y hacer crecer sus negocios.</p>
+                <h2>SERVICIOS DE TRANSFORMACIÓN DIGITAL.</h2>
+                <p>Buscamos que nuestros clientes aprovechen las ventajas de la era digital para impulsar la eficiencia
+                    operativa y hacer crecer sus negocios.</p>
                 <hr>
                 <div class="footer__card">
                     <h3 class="user__name"></h3>
                     <i></i>
                 </div>
             </div>
-            <div class="card">
-                <div class="cover__card">
-                    <img src="media/serviciosdigital.jpg" alt="">
-                </div>
-                <h2>Servicios de Transformación Digital.</h2>
-                <p>Ayudamos a las empresas a prosperar en la era de la transformación al renovarse constantemente,
-                    experimentar con nuevas ideas y expandir el éxito.</p>
-                <hr>
-                <div class="footer__card">
-                    <h3 class="user__name"></h3>
-                    <i></i>
-                </div>
-            </div>
-
 
             <div class="card">
                 <div class="cover__card">
                     <img src="media/entregadesolucionestecnologicas.jpg" alt="">
                 </div>
-                <h2>Entrega de soluciones tecnológicas.
+                <h2>ENTREGA DE SOLUCIONES TECNOLÓGICAS.
                 </h2>
-                <p>Nuestro objetivo es apoyar a sus organizaciones a medida que inician o experimentan una
+                <p>Nuestro objetivo es apoyar a las organizaciones a medida que inician o experimentan una
                     transformación importante.</p>
                 <hr>
                 <div class="footer__card">
@@ -107,45 +94,32 @@
                     <i></i>
                 </div>
             </div>
+
+
             <div class="card">
                 <div class="cover__card">
                     <img src="media/transformaciondelatecnologia.jpg" alt="">
                 </div>
-                <h2>Transformación de la tecnología.</h2>
-                <p>Las organizaciones deben considerar la transformación fundacional en lugar de soluciones rápidas e
-                    inversiones ad hoc para darles la agilidad para adaptarse.</p>
+                <h2>AUDITORÍA IT.</h2>
+                <p>Nuestro enfoque de auditoría se encuentra respaldado por un profundo conocimiento de las industrias
+                    más representativas de nuestro país y nuestra red global de profesionales calificados.</p>
                 <hr>
                 <div class="footer__card">
                     <h3 class="user__name"></h3>
                     <i></i>
                 </div>
             </div>
-            <div class="card">
-                <div class="cover__card">
-                    <img src="media/blockchain.jpg" alt="">
-                </div>
-                <h2>Servicios de consultoría de blockchain.</h2>
-                <p>Blockchain es un libro contable descentralizado de cada transacción que se produce a través de una
-                    red, lo que permite el intercambio descentralizado de datos de confianza un "libro de registro
-                    compartido".</p>
-                <hr>
-                <div class="footer__card">
-                    <h3 class="user__name"></h3>
-                    <i></i>
-                </div>
-            </div>
+
 
 
             <div class="card">
                 <div class="cover__card">
                     <img src="media/****************" alt="">
                 </div>
-                <h2>Soporte Aparatos Industriales.
+                <h2>SOPORTE DE EQUIPOS INDUSTRIALES.
                 </h2>
-                <p> Es extremadamente importante contar con un soporte y
-                    mantenimiento de procesos industriales que asegure que toda la actividad de la empresa se ejecuta
-                    sin riesgo y con garantía de éxito.</p>
-                <hr>
+                <p> Es extremadamente importante contar con un soporte y mantenimiento de aparatos industriales que
+                    asegure que toda la actividad de la organización se ejecute sin riesgo y con garantía de éxito.</p>
                 <div class="footer__card">
                     <h3 class="user__name"></h3>
                     <i></i>
@@ -155,27 +129,15 @@
                 <div class="cover__card">
                     <img src="media/**************" alt="">
                 </div>
-                <h2>Consultoria.</h2>
-                <p>**************</p>
+                <h2>SERVICIO DE CONSULTORÍA.</h2>
+                <p>Innovamos en la manera de hacer negocios. Nuestros servicios de consultoría, con foco en la
+                    transformación, acompañan a nuestros clientes de manera integral.</p>
                 <hr>
                 <div class="footer__card">
                     <h3 class="user__name"></h3>
                     <i></i>
                 </div>
             </div>
-            <div class="card">
-                <div class="cover__card">
-                    <img src="media/***********" alt="">
-                </div>
-                <h2>Auditoria.</h2>
-                <p>**************************.</p>
-                <hr>
-                <div class="footer__card">
-                    <h3 class="user__name"></h3>
-                    <i></i>
-                </div>
-            </div>
-        </div>
 
 
 
@@ -205,7 +167,7 @@
                 <h2>Productos</h2>
                 <a href="#">Insumos Informaticos</a>
                 <a href="#">Insumos Electronicos</a>
-                
+
             </div>
 
             <!---
