--- a/servicios.html
+++ b/servicios.html
@@ -114,7 +114,7 @@
 
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/****************" alt="">
+                    <img src="media/serviciosdigital.jpg" alt="">
                 </div>
                 <h2>SOPORTE DE EQUIPOS INDUSTRIALES.
                 </h2>
@@ -127,7 +127,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/**************" alt="">
+                    <img src="media/blockchain.jpg" alt="">
                 </div>
                 <h2>SERVICIO DE CONSULTORÍA.</h2>
                 <p>Innovamos en la manera de hacer negocios. Nuestros servicios de consultoría, con foco en la
