--- a/productos.html
+++ b/productos.html
@@ -145,7 +145,9 @@
 
             <div class="box__footer">
                 <h2>Productos</h2>
-                <a href="#">Insumos Informaticos</a>
+                <a href="#">Equipos Industriales</a>
+                <a href="#">Insumos Informáticos</a>
+                <a href="#">Telecomunicaciones</a>
                 <a href="#">Insumos Electronicos</a>
             </div>
 
