--- a/servicios.html
+++ b/servicios.html
@@ -165,9 +165,10 @@
 
             <div class="box__footer">
                 <h2>Productos</h2>
-                <a href="#">Insumos Informaticos</a>
+                <a href="#">Equipos Industriales</a>
+                <a href="#">Insumos Informáticos</a>
+                <a href="#">Telecomunicaciones</a>
                 <a href="#">Insumos Electronicos</a>
-
             </div>
 
             <!---
