--- a/productos.html
+++ b/productos.html
@@ -94,7 +94,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/******" alt="">
+                    <img src="media/telecomunicaciones.png" alt="">
                 </div>
                 <h2>TELECOMUNICACIONES</h2>
 
@@ -107,7 +107,7 @@
             </div>
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/********">
+                    <img src="media/insumoselectronicos.png">
                 </div>
                 <h2> INSUMOS ELECTRONICOS</h2>
 
