--- a/productos.html
+++ b/productos.html
@@ -69,7 +69,7 @@
         <div class="container__cards">
             <div class="card">
                 <div class="cover__card">
-                    <img src="media/*******" alt="">
+                    <img src="media/equiposindustriales.jpg" alt="">
                 </div>
                 <h2> EQUIPOS INDUSTRIALES</h2>
                 <hr>
