--- a/productos.html
+++ b/productos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Bienvenido | Atlant</title>
-    <link rel="icon" href="media/logo.png">
+    <link rel="icon" href="media/logo800x800.png">
 
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 
