se modifico la ubicacion de las  tarjetas

--- a/servicios.html
+++ b/servicios.html
@@ -95,9 +95,12 @@
                 </div>
             </div>
 
+        </div>
+        
 
-            <div class="card">
-                <div class="cover__card">
+            <div class="container__cards">
+                <div class="card">
+                    <div class="cover__card">
                     <img src="media/transformaciondelatecnologia.jpg" alt="">
                 </div>
                 <h2>AUDITORÍA IT.</h2>
