--- a/productos.html
+++ b/productos.html
@@ -158,12 +158,10 @@
 
                 <div class="box__footer">
                     <h2>Contactenos</h2>
-
-                    <a href="#"><img src="./media/face3dsinfondo.png" alt=""> </a>
-                    <a href="#"><img src="./media/twitter3d.png" alt=""> </a>
-                    <a href="#"><img src="./media/linkedin.png" alt=""> </a>
-                    <a href="#"><img src="./media/instagram.png" alt=""></i></a>
-
+                    <a href="https://www.facebook.com/atlant.sas/"><img src="./media/face3dsinfondo.png" alt="">  </a>
+                    <a href="https://twitter.com/Atlant_sas"><img src="./media/twitter3d.png" alt=""> </a>
+                    <a href="https://www.linkedin.com/company/96461238/admin/feed/posts/?feedType=following"><img src="./media/linkedin.png" alt=""> </a>
+                    <a href="https://www.instagram.com/atlant_sas/"><img src="./media/instagram.png" alt=""></i></a>
                 </div>
             </div>
 
